prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/syntax_errors/unsupported_directive.nut
// EXPECT_ERROR: "unsupported directive"
#this-directive-does-not-exist
let x = 42
